--- a/Lab_6.css
+++ b/Lab_6.css
@@ -1,66 +1,33 @@
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-                margin: 0;
-                background-color: #fffff0;
-            }
-            .header{
-                background-color:  white;
-                color: black;
-                font-size: 20px;
-                font-weight: bold;
-                height: 80px;
-                line-height: 80px;
-                padding-left: 30px;
-            }
-            .footer{
-                background-color: #333;
-                color: #888;
-                font-size: 14px;
-                font-style: italic;
-                text-align: right;
-                height: 30px;
-                line-height: 30px;
-                padding: 20px;
-                position: fixed;
-                bottom: 0px;
-                left: 0;
-                right: 0;
-            }
-            .b{
-                background-color: rgb(228, 198, 198);
-                border-color: #333;
-                border-style: solid;
-                border-width: 5px;
-                width: 200px;
-                height: 50;
-                float: left;
-
-            }
-            .c{
-                background-color: rgb(228, 198, 198);
-                border-color: #333;
-                border-style: solid;
-                border-width: 5px;
-                width: 200px;
-                height: 50;
-                float: right;
-            }
-            .d{
-                border:  5px;
-                position: relative;
-            }
-            .e{
-                border-color: #333;
-                border-style: solid;
-                border-width: 5px;
-                background: 5px;
-                background-color: rgb(155, 190, 154);
-                position: relative;
-                z-index: auto;
-                width: 200px;
-                height: 100px;
-            }
-            .e:hover {
-                background-color: #516;
-                z-index: 1;
-            }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: #fffff0;
+}
+.header{
+    background-color:  white;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    height: 80px;
+    line-height: 80px;
+    padding-left: 30px;
+}
+.footer{
+    background-color: #333;
+    color: #888;
+    font-size: 14px;
+    font-style: italic;
+    text-align: right;
+    height: 30px;
+    line-height: 30px;
+    padding: 20px;
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+}
+.header .language {
+    position: absolute;
+    right: 30px;
+    top: 0px;
+}
