--- a/Lab_6.css
+++ b/Lab_6.css
@@ -4,8 +4,8 @@ body {
     background-color: #fffff0;
 }
 .header{
-    background-color:  white;
-    color: black;
+    background-color:  #333;
+    color: #888;
     font-size: 20px;
     font-weight: bold;
     height: 80px;
