--- a/lab7.css
+++ b/lab7.css
@@ -59,3 +59,11 @@ body {
 #tab_2:checked ~ #txt_2,
 #tab_3:checked ~ #txt_3,
 #tab_4:checked ~ #txt_4 { display: block; }
+.step{
+    width: 200px;
+    height: 100px;
+    border: 1px solid;
+    position: absolute;
+    top: 300px;
+    left: 30px;
+}
